--- a/index.html
+++ b/index.html
@@ -1,7 +1,36 @@
-# AutoUploader
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>AutoUploader — Placeholder</title>
+  <style>
+    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; line-height: 1.6; margin: 2rem; color: #111; }
+    header { border-bottom: 1px solid #e6e6e6; padding-bottom: 0.5rem; margin-bottom: 1rem; }
+    h1 { margin: 0 0 0.25rem 0; font-size: 1.75rem; }
+    .muted { color: #555; font-size: 0.95rem; }
+    main { max-width: 720px; }
+    footer { margin-top: 2rem; font-size: 0.9rem; color: #666; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>AutoUploader</h1>
+    <p class="muted">Official placeholder site for app registration purposes</p>
+  </header>
 
-AutoUploader is an automation tool that uploads videos to multiple platforms.
+  <main>
+    <section>
+      <p><strong>AutoUploader</strong> is an automation tool that uploads videos to multiple platforms.</p>
 
-This tool runs locally on the user's machine and does not send personal data to external servers.
+      <p>This tool runs locally on the user's machine and does not send personal data to external servers.</p>
 
-This is the official placeholder site for app registration purposes.
+      <p>This is the official placeholder site for app registration purposes.</p>
+    </section>
+  </main>
+
+  <footer>
+    <small>Generated: basic placeholder page for AutoUploader</small>
+  </footer>
+</body>
+</html>
