--- a/terms.html
+++ b/terms.html
@@ -1,2 +1,3 @@
 <h1>Terms of Service - AutoUploader</h1>
 <p>AutoUploader is a local automation tool that uploads videos to platforms...</p>
+tiktok-developers-site-verification=KRP32nYCfRbH6BkcDQWwokaAWtqWKNg4
